--- a/docs/1.1-InstallationPrerequisites.md
+++ b/docs/1.1-InstallationPrerequisites.md
@@ -77,7 +77,7 @@ osdctl account console -p $AWSPROFILE -i $ACCOUNT_ID
 
 ### 1.1.3 STS Roles
 
-To run the operator tests for [STS](0.1-Glossary.md#sts) mode you will need to create two roles &mdash; one in each of the AWS accounts you have been assigned. The name of these roles doesn't matter when you create it, however you will need to know the ARN of both in order to configure the operator to use them. By the end of these steps your two AWS accounts will look as follows:
+To run the operator tests for [STS](0.1-Glossary.md#sts) mode you will need to create two roles &mdash; one in each of the AWS accounts you have been assigned. We've provided [this script](../hack/scripts/aws/setup_aws_accounts.sh) to setup your accounts as needed, as this process can be quite involved when done manually. By the end of these steps your two AWS accounts will look as follows:
 
 - **Account 1 (Jump Host)**
   - This Account will be your Jump Host
@@ -89,123 +89,28 @@ To run the operator tests for [STS](0.1-Glossary.md#sts) mode you will need to c
   - This Account is the one we will gain access to via the `Access Role`
   - It will have a new role
     - The Trust Relationship for this role will be updated to trust Account 1 Jump Role ARN
-
+ 
 The following diagram shows the Account relationship
 
 ![Account Relationship Diagram](images/jump-role-diagram.png)
 
-#### 1.1.3.1 - Jump Role
 
-The `Jump Role` will be a simulation of the role that we use as a bastion of sorts. For the STS Architecture, we have an IAM user that assumes a specific role in a specific account, and then using that role they can assume role into the cluster's account in order to run operations as necessary.
-
-You will need to create this `Jump Role` in the first osd-staging AWS account assigned to you. You will need to add your `Payer Account` IAM user credentials as the Principal in the `Trust Relationship`. Ensure this is the same user used to create the AWS Account Operator credentials.
-
-The `Jump Role` should only require the permissions to assume-roles.  No other permissions should be necessary. You will probably need to create the IAM policy first before the Role. To do so go to your `AWS console > IAM > Policies > Create Policy > JSON`
-
-Example Assume Role Policy:
+[Here](./1.2-STSSetup.md) are the manual steps to create the above, these go more into the _why_ of each step, but if you're more interested in just getting your account setup, use [this script](../hack/scripts/aws/setup_aws_accounts.sh):
 ```
-{
-    "Version": "2012-10-17",
-    "Statement": [
-        {
-            "Effect": "Allow",
-            "Action": "sts:AssumeRole",
-            "Resource": "*"
-        }
-    ]
-}
+./setup_aws_accounts.sh -a <Assigned AWS Account ID 1> -b <Assigned AWS Account ID 2> -u <username>
 ```
-
-Next Step is to create the `Role` itself. To do so, go to `Roles > Create Role > Another AWS Account` - here you can paste the `Payer Account` ID for the required Account ID. Click `Next: Permissions` and select the newly created `Policy` from the previous step. Name the `Role` whatever you prefer. 
-
-Next required step is to update the `Trust Relationship` for the `Role`. To do so, click into the `Role` you created, select the `Trust Relationship` tab and edit it, with the following example as a reference:
+Upon completion of the script you should have output with the following:
 ```
-{
-    "Version": "2012-10-17",
-    "Statement": [
-      {
-          "Effect": "Allow",
-          "Principal": {
-              "AWS": "arn:aws:iam::[payer-account-id]:user/[your-username]"
-          },
-          "Action": "sts:AssumeRole",
-          "Condition": {}
-      }
-    ]
-}
+Your Accounts have been setup successfully!
+Place the following in your env variables for the AAO
+STS_ROLE_ARN=arn:aws:iam::<Assigned AWS Account ID 2>:role/AccessRole
+STS_JUMP_ARN=arn:aws:iam::<Assigned AWS Account ID 1>:role/JumpRole
+STS_JUMP_ROLE=arn:aws:iam::<Assigned AWS Account ID 1>:role/JumpRole
 ```
-You will need to note the `ARN` for this `Jump Role` as it's required for the next step, setting up the `Access Role`.
+Do as instructed and add the fields to your local `.envrc`
 
-**Note:** You will need to put the ARN for this `Jump Role` into the Operator Config Map created later - in the `STS_JUMP_ARN` environment variable.
-
-**Note 2:** Make sure your iam user in the `Payer Account` has sufficient permissions to assume the role. To do so, log in to your `Payer Account` again and go to `AWS Console > IAM > Users > [Username] > + Add inline policy`. Click on `JSON` and paste the following policy json:
-
-```json
-{
-    "Version": "2012-10-17",
-    "Statement": [
-        {
-            "Sid": "VisualEditor0",
-            "Effect": "Allow",
-            "Action": "sts:AssumeRole",
-            "Resource": "arn:aws:iam::[assigned-osd-staging-1-account]:role/*"
-        }
-    ]
-}
-```
-
-Replace `[assigned-osd-staging-1-account]` with the ID of the Account you created the Jump Role in. Verify your permissions by assuming the role from your awscli:
-
-```
-$> aws sts assume-role --role-arn ${STS_JUMP_ARN} --role-session-name "STSCredsCheck"
-{
-    "Credentials": {
-...
-```
-
-#### 1.1.3.2 - Access Role
-
-The `Access Role` will be a simulation of a role on a customer's account that gives us access to initialize the regions and initialize a cluster.  On external customer accounts this is assumed to be a very locked-down role with ONLY the necessary permissions needed to run the operator or install the cluster resources. Minimal permissions required for the role are provided below.
-
-Create a new `Role` for this account, similarly to how the role was created for the `Jump Role`, but instead of pointing to the `Payer Account` ID, point at the Account ID belonging to `Account 1`, ie. the Account with the Jump Role. 
-
-Once created, the `Role`'s `Trust Relationship` will need to be updated with the following example:
-```
-{
-  "Version": "2012-10-17",
-  "Statement": [
-    {
-      "Effect": "Allow",
-      "Principal": {
-        "AWS": "arn:aws:iam::[jump-role-account-id]:role/[jump-role-name]"
-      },
-      "Action": "sts:AssumeRole",
-      "Condition": {}
-    }
-  ]
-}
-```
-
-Example minimal permissions Policy Document
-```
-{
-  "Version": "2012-10-17",
-  "Statement": [
-    {
-      "Effect": "Allow",
-      "Action": [
-        "ec2:RunInstances",
-        "ec2:TerminateInstances",
-        "ec2:DescribeInstanceStatus",
-        "ec2:CreateTags",
-        "ec2:DeleteTags"
-      ],
-      "Resource": "*"
-    }
-  ]
-}
-```
-**Note:** You will need to put the ARN for this `Access Role` into your environment variable, `STS_ROLE_ARN`, in order for this to be used to create accountclaims within the make tests.
+- The `Jump Role` will be a simulation of the role that we use as a bastion of sorts. For the STS Architecture, we have an IAM user that assumes a specific role in a specific account, and then using that role they can assume role into the cluster's account in order to run operations as necessary.
+- The `Access Role` will be a simulation of a role on a customer's account that gives us access to initialize the regions and initialize a cluster.  On external customer accounts this is assumed to be a very locked-down role with ONLY the necessary permissions needed to run the operator or install the cluster resources. Minimal permissions required for the role are provided below.
 
 ### 1.1.3.4 STS Role Validation
 
